// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotchedBox /> can be below 1`] = `
<div
  className="fj6qquh"
>
  <div
    className="fplf5l1"
  />
  <div
    className="fellj54"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can be inline 1`] = `
<div
  className="f1d96uqn"
>
  <div
    className="fbyel7x"
  />
  <div
    className="fellj54"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can be inverted 1`] = `
<div
  className="f1dc9byp"
>
  <div
    className="f1j8sg7n"
  />
  <div
    className="f1ye6mfi"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can have a negative offet 1`] = `
<div
  className="fj6qquh"
>
  <div
    className="fja3rry"
  />
  <div
    className="fellj54"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can have an offet of 0 1`] = `
<div
  className="fj6qquh"
>
  <div
    className="fbyel7x"
  />
  <div
    className="fellj54"
  >
    hello world
  </div>
</div>
`;
